--- a/prepare_covid_data.ipynb
+++ b/prepare_covid_data.ipynb
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of countries: 130\n"
+      "number of countries: 128\n"
      ]
     }
    ],
@@ -349,17 +349,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Prepare inputDB.csv: 100% [--------------] Time:  0:10:13 Elapsed Time: 0:10:13\n",
-      "Prepare Output_5.csv: 100% [-------------] Time:  0:02:18 Elapsed Time: 0:02:18\n",
-      "Prepare Output_10.csv: 100% [------------] Time:  0:01:11 Elapsed Time: 0:01:11\n",
+      "Prepare Output_5.csv: 100% [-------------] Time:  0:02:15 Elapsed Time: 0:02:15\n",
       "Prepare population.csv: 100% [-----------] Time:  0:00:00 Elapsed Time: 0:00:00\n"
      ]
     }
    ],
    "source": [
-    "prepare_data_inputDB()\n",
+    "# prepare_data_inputDB()\n",
     "prepare_data_output5()\n",
-    "prepare_data_output10()\n",
+    "# prepare_data_output10()\n",
     "prepare_data_population()"
    ]
   },
