--- a/download_covid_data.ipynb
+++ b/download_covid_data.ipynb
@@ -49,6 +49,39 @@
     "if not os.path.exists(f'{data_dir_path}/{country}'):\n",
     "    os.mkdir(f'{data_dir_path}/{country}')\n",
     "\n",
+    "if os.path.exists(f'{data_dir_path}/population_age_group_combiner.json'):\n",
+    "    with open(f'{data_dir_path}/population_age_group_combiner.json', 'r') as file:\n",
+    "        population_age_group_combiner = json.load(file)\n",
+    "else:\n",
+    "    population_age_group_combiner = {}\n",
+    "if os.path.exists(f'{data_dir_path}/population_age_group_combiner.json'):\n",
+    "    with open(f'{data_dir_path}/deaths_age_group_combiner.json', 'r') as file:\n",
+    "        deaths_age_group_combiner = json.load(file)\n",
+    "else:\n",
+    "    deaths_age_group_combiner = {}\n",
+    "if os.path.exists(f'{data_dir_path}/population_age_group_combiner.json'):\n",
+    "    with open(f'{data_dir_path}/covid_age_group_combiner.json', 'r') as file:\n",
+    "        covid_age_group_combiner = json.load(file)\n",
+    "else:\n",
+    "    covid_age_group_combiner = {}\n",
+    "    \n",
+    "population_age_group_combiner['Germany'] = {'80+': ['80-84', '85+'],\n",
+    "                                            '60-79': ['60-64', '65-69', '70-74', '75-79'],\n",
+    "                                            '00-59': ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49', '50-54', '55-59']}\n",
+    "\n",
+    "deaths_age_group_combiner['Germany'] = {'80+': ['80-84', '85+'], '60-79': ['60-64', '65-69', '70-74', '75-79'],\n",
+    "                                        '00-59': ['40-44', '45-49', '50-54', '55-59']}\n",
+    "\n",
+    "covid_age_group_combiner['Germany'] ={'00-59': ['00-04', '05-14', '15-34', '35-59']}\n",
+    "\n",
+    "with open(f'{data_dir_path}/population_age_group_combiner.json', 'w') as file:\n",
+    "    json.dump(population_age_group_combiner, file, indent=4)\n",
+    "with open(f'{data_dir_path}/deaths_age_group_combiner.json', 'w') as file:\n",
+    "    json.dump(deaths_age_group_combiner, file, indent=4)\n",
+    "with open(f'{data_dir_path}/covid_age_group_combiner.json', 'w') as file:\n",
+    "    json.dump(covid_age_group_combiner, file, indent=4)\n",
+    "\n",
+    "\n",
     "cases_csv = 'https://raw.githubusercontent.com/KITmetricslab/covid19-forecast-hub-de/master/data-truth/RKI/by_age/truth_RKI-Incident%20Cases%20by%20Age_Germany.csv'\n",
     "cases = pd.read_csv(cases_csv)\n",
     "cases['age_group'].replace(dict([['A00-A04', '00-04'], ['A05-A14', '05-14'], ['A15-A34', '15-34'], ['A35-A59', '35-59'], ['A60-A79', '60-79'], ['A80+', '80+']]), inplace=True)\n",
@@ -66,6 +99,306 @@
     "deaths['location_name'] = deaths['location_name'].apply(lambda x: 'DE'+x[2:])\n",
     "deaths.to_csv(f'{data_dir_path}/{country}/covid_deaths.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc05ee2b-2b4e-44ce-b824-e24f39599c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Austria done\n",
+      "Belgium done\n",
+      "Bulgaria done\n",
+      "Croatia done\n",
+      "Czechia done\n",
+      "Denmark done\n",
+      "France done\n",
+      "Greece done\n",
+      "Ireland done\n",
+      "Italy done\n",
+      "Netherlands done\n",
+      "Norway done\n",
+      "Portugal done\n",
+      "Romania done\n",
+      "Spain done\n",
+      "Sweden done\n",
+      "Switzerland done\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('./data/Data/Covid_deaths.csv')\n",
+    "data = data[data['Measure'].isin(['Cases'])]\n",
+    "with open(f'{data_dir_path}/eurostat_countries.json', 'r') as file:\n",
+    "    country_translator = json.load(file)\n",
+    "for country in data['Country'].unique():\n",
+    "    if country in ['Ukraine', 'Germany']:\n",
+    "        continue\n",
+    "        \n",
+    "        \n",
+    "    if 'b' in  data[data['Country'] == country]['Sex'].unique() and country != 'United Kingdom':\n",
+    "        conditions = np.logical_and(data['Country'] == country, data['Sex'] == 'b')\n",
+    "        cases = data[np.logical_and(conditions, data['Measure'] == 'Cases')]\n",
+    "        cases = cases[cases['week'].str.startswith('202')]\n",
+    "        cases['week'] = cases['week'].apply(lambda row: datetime.datetime.strptime(row + '-1', \"%Y-W%W-%w\").strftime('%Y-%m-%d'))\n",
+    "        cases['Country'] = cases['Country'].replace(country_translator)\n",
+    "        cases = cases[~cases['Age'].isin(['TOT', 'UNK'])]\n",
+    "        age_groups = {}\n",
+    "        if any(cases['Age'].unique()):\n",
+    "            for index, age in enumerate(sorted(cases['Age'].apply(lambda x: int(x)).unique())):\n",
+    "                if index < len(cases['Age'].unique()) - 1:\n",
+    "                    age_groups[str(age)] = f\"{int(age):02d}-{sorted(cases['Age'].apply(lambda x: int(x)).unique())[index + 1] - 1:02d}\"\n",
+    "            age_groups[cases['Age'].unique()[-1]] = cases['Age'].unique()[-1] + '+'\n",
+    "            cases['Age'] = cases['Age'].replace(age_groups)\n",
+    "            cases = cases.drop(columns=['Sex', 'Measure']).rename(columns={'Country': 'location_name', 'Age': 'Age group', 'week': 'date', 'WeekSum': 'value'})\n",
+    "            cases = cases.groupby(['Age group', 'location_name', 'date']).sum().reset_index()\n",
+    "            cases = cases.reindex(['date','location_name','Age group','value'], axis=1).reset_index(drop=True)\n",
+    "            cases.to_csv(f'{data_dir_path}/{country}/covid_cases.csv')\n",
+    "            print(country, 'done')\n",
+    "            \n",
+    "    elif 'f' in  data[data['Country'] == country]['Sex'].unique() and 'm' in  data[data['Country'] == country]['Sex'].unique() and country != 'United Kingdom':\n",
+    "        conditions = np.logical_and(data['Country'] == country, data['Sex'].isin(['m', 'f']))\n",
+    "        cases = data[np.logical_and(conditions, data['Measure'] == 'Cases')]\n",
+    "        cases = cases[cases['week'].str.startswith('202')]\n",
+    "        cases = cases[~cases['week'].str.endswith('2-W52')]\n",
+    "        cases = cases.groupby(['Country', 'Age', 'week']).sum().reset_index()\n",
+    "        cases['week'] = cases['week'].apply(lambda row: datetime.datetime.strptime(row + '-1', \"%Y-W%W-%w\").strftime('%Y-%m-%d'))\n",
+    "        cases['Country'] = cases['Country'].replace(country_translator)\n",
+    "        cases = cases[~cases['Age'].isin(['TOT', 'UNK'])]\n",
+    "        age_groups = {}\n",
+    "        if any(cases['Age'].unique()):\n",
+    "            for index, age in enumerate(sorted(cases['Age'].apply(lambda x: int(x)).unique())):\n",
+    "                if index < len(cases['Age'].unique()) - 1:\n",
+    "                    age_groups[str(age)] = f\"{int(age):02d}-{sorted(cases['Age'].apply(lambda x: int(x)).unique())[index + 1] - 1:02d}\"\n",
+    "            age_groups[cases['Age'].unique()[-1]] = cases['Age'].unique()[-1] + '+'\n",
+    "            cases['Age'] = cases['Age'].replace(age_groups)\n",
+    "            cases = cases.rename(columns={'Country': 'location_name', 'Age': 'Age group', 'week': 'date', 'WeekSum': 'value'})\n",
+    "            cases = cases.groupby(['Age group', 'location_name', 'date']).sum().reset_index()\n",
+    "            cases = cases.reindex(['date','location_name','Age group','value'], axis=1).reset_index(drop=True)\n",
+    "            cases.to_csv(f'{data_dir_path}/{country}/covid_cases.csv')\n",
+    "            print(country, 'done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d6c822d-fcd1-456b-a93b-719ae316c2bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('./data/Data/Covid_deaths.csv')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7b6ca909-b6d8-4a76-abc3-44bd8f59b31c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Austria done\n",
+      "Belgium done\n",
+      "Denmark done\n",
+      "France done\n",
+      "Greece done\n",
+      "Hungary done\n",
+      "Ireland done\n",
+      "Italy done\n",
+      "Latvia done\n",
+      "Netherlands done\n",
+      "Norway done\n",
+      "Portugal done\n",
+      "Romania done\n",
+      "Spain done\n",
+      "Sweden done\n",
+      "Switzerland done\n",
+      "United Kingdom done\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('./data/Data/Covid_deaths.csv')\n",
+    "data = data[data['Measure'].isin(['Deaths'])]\n",
+    "with open(f'{data_dir_path}/eurostat_countries.json', 'r') as file:\n",
+    "    country_translator = json.load(file)\n",
+    "for country in data['Country'].unique():\n",
+    "    if country in ['Ukraine', 'Germany']:\n",
+    "        continue\n",
+    "        \n",
+    "        \n",
+    "    if 'b' in  data[data['Country'] == country]['Sex'].unique():\n",
+    "        conditions = np.logical_and(data['Country'] == country, data['Sex'] == 'b')\n",
+    "        cases = data[np.logical_and(conditions, data['Measure'] == 'Deaths')]\n",
+    "        cases = cases[cases['week'].str.startswith('202')]\n",
+    "        cases['week'] = cases['week'].apply(lambda row: datetime.datetime.strptime(row + '-1', \"%Y-W%W-%w\").strftime('%Y-%m-%d'))\n",
+    "        cases['Country'] = cases['Country'].replace(country_translator)\n",
+    "        cases = cases[~cases['Age'].isin(['TOT', 'UNK'])]\n",
+    "        age_groups = {}\n",
+    "        if any(cases['Age'].unique()):\n",
+    "            for index, age in enumerate(sorted(cases['Age'].apply(lambda x: int(x)).unique())):\n",
+    "                if index < len(cases['Age'].unique()) - 1:\n",
+    "                    age_groups[str(age)] = f\"{int(age):02d}-{sorted(cases['Age'].apply(lambda x: int(x)).unique())[index + 1] - 1:02d}\"\n",
+    "            age_groups[cases['Age'].unique()[-1]] = cases['Age'].unique()[-1] + '+'\n",
+    "            cases['Age'] = cases['Age'].replace(age_groups)\n",
+    "            cases = cases.drop(columns=['Sex', 'Measure']).rename(columns={'Country': 'location_name', 'Age': 'Age group', 'week': 'date', 'WeekSum': 'value'})\n",
+    "            cases = cases.groupby(['Age group', 'location_name', 'date']).sum().reset_index()\n",
+    "            cases = cases.reindex(['date','location_name','Age group','value'], axis=1).reset_index(drop=True)\n",
+    "            cases.to_csv(f'{data_dir_path}/{country}/covid_deaths.csv')\n",
+    "            print(country, 'done')\n",
+    "            \n",
+    "    elif 'f' in  data[data['Country'] == country]['Sex'].unique() and 'm' in  data[data['Country'] == country]['Sex'].unique():\n",
+    "        conditions = np.logical_and(data['Country'] == country, data['Sex'].isin(['m', 'f']))\n",
+    "        cases = data[np.logical_and(conditions, data['Measure'] == 'Deaths')]\n",
+    "        cases = cases[cases['week'].str.startswith('202')]\n",
+    "        cases = cases[~cases['week'].str.endswith('2-W52')]\n",
+    "        cases = cases.groupby(['Country', 'Age', 'week']).sum().reset_index()\n",
+    "        cases['week'] = cases['week'].apply(lambda row: datetime.datetime.strptime(row + '-1', \"%Y-W%W-%w\").strftime('%Y-%m-%d'))\n",
+    "        cases['Country'] = cases['Country'].replace(country_translator)\n",
+    "        cases = cases[~cases['Age'].isin(['TOT', 'UNK'])]\n",
+    "        \n",
+    "        age_groups = {}\n",
+    "        if any(cases['Age'].unique()):\n",
+    "            for index, age in enumerate(sorted(cases['Age'].apply(lambda x: int(x)).unique())):\n",
+    "                if index < len(cases['Age'].unique()) - 1:\n",
+    "                    age_groups[str(age)] = f\"{int(age):02d}-{sorted(cases['Age'].apply(lambda x: int(x)).unique())[index + 1] - 1:02d}\"\n",
+    "            age_groups[cases['Age'].unique()[-1]] = cases['Age'].unique()[-1] + '+'\n",
+    "            cases['Age'] = cases['Age'].replace(age_groups)\n",
+    "            cases = cases.rename(columns={'Country': 'location_name', 'Age': 'Age group', 'week': 'date', 'WeekSum': 'value'})\n",
+    "            cases = cases.groupby(['Age group', 'location_name', 'date']).sum().reset_index()\n",
+    "            cases = cases.reindex(['date','location_name','Age group','value'], axis=1).reset_index(drop=True)\n",
+    "            cases.to_csv(f'{data_dir_path}/{country}/covid_deaths.csv')\n",
+    "            print(country, 'done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "413f0d3f-19a9-453a-bf35-2d281198157c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(f'{data_dir_path}/population_age_group_combiner.json'):\n",
+    "    with open(f'{data_dir_path}/population_age_group_combiner.json', 'r') as file:\n",
+    "        population_age_group_combiner = json.load(file)\n",
+    "else:\n",
+    "    population_age_group_combiner = {}\n",
+    "if os.path.exists(f'{data_dir_path}/population_age_group_combiner.json'):\n",
+    "    with open(f'{data_dir_path}/deaths_age_group_combiner.json', 'r') as file:\n",
+    "        deaths_age_group_combiner = json.load(file)\n",
+    "else:\n",
+    "    deaths_age_group_combiner = {}\n",
+    "if os.path.exists(f'{data_dir_path}/population_age_group_combiner.json'):\n",
+    "    with open(f'{data_dir_path}/covid_age_group_combiner.json', 'r') as file:\n",
+    "        covid_age_group_combiner = json.load(file)\n",
+    "else:\n",
+    "    covid_age_group_combiner = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "112db179-b493-4e4d-81fd-5215dececdea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "covid deaths ['00-09', '10-19', '20-29', '30-39', '40-49', '50-59', '60-69', '70-79', '80-89', '90+']\n",
+      "covid cases ['00-09', '10-19', '20-29', '30-39', '40-49', '50-59', '60-69', '70-79', '80-89', '90+']\n",
+      "total deaths ['TOTAL', 'UNK', 'Y10-14', 'Y15-19', 'Y20-24', 'Y25-29', 'Y30-34', 'Y35-39', 'Y40-44', 'Y45-49', 'Y5-9', 'Y50-54', 'Y55-59', 'Y60-64', 'Y65-69', 'Y70-74', 'Y75-79', 'Y80-84', 'Y85-89', 'Y_GE90', 'Y_LT5']\n",
+      "population ['TOTAL', 'UNK', 'Y10-14', 'Y15-19', 'Y20-24', 'Y25-29', 'Y30-34', 'Y35-39', 'Y40-44', 'Y45-49', 'Y5-9', 'Y50-54', 'Y55-59', 'Y60-64', 'Y65-69', 'Y70-74', 'Y75-79', 'Y80-84', 'Y_GE75', 'Y_GE80', 'Y_GE85', 'Y_LT5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "country = 'Italy'\n",
+    "deaths = pd.read_csv(f'{data_dir_path}/{country}/covid_deaths.csv')\n",
+    "cases = pd.read_csv(f'{data_dir_path}/{country}/covid_cases.csv')\n",
+    "total_deaths = pd.read_csv(f'{data_dir_path}/{country}/old_deaths.csv')\n",
+    "population = pd.read_csv(f'{data_dir_path}/{country}/old_population.csv')\n",
+    "\n",
+    "print('covid deaths', list(deaths['Age group'].unique()))\n",
+    "print('covid cases', list(cases['Age group'].unique()))\n",
+    "print('total deaths', list(total_deaths['Age group'].unique()))\n",
+    "print('population', list(population['Age group'].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "570d8438-6451-4094-8850-e553eff89fb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Italy\n",
+    "country = 'Italy'\n",
+    "population_age_group_combiner[country] = {'80+': ['80-84', '85+'],\n",
+    "                                          '70-79': ['70-74', '75-79'],\n",
+    "                                          '60-69': ['60-64', '65-69'],\n",
+    "                                          '00-59': ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49', '50-54', '55-59']}\n",
+    "\n",
+    "deaths_age_group_combiner[country] = {'80+': ['80-84', '85+'],\n",
+    "                                      '70-79': ['70-74', '75-79'],\n",
+    "                                      '60-69': ['60-64', '65-69'],\n",
+    "                                      '00-59': ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49', '50-54', '55-59']}\n",
+    "\n",
+    "covid_age_group_combiner[country] ={'00-59': ['00-09', '10-19', '20-29', '30-39', '40-49', '50-59'],\n",
+    "                                    '80+': ['80-89', '90+']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2c259efe-e808-4c75-a6cb-2f39e5d284f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Austria\n",
+    "country = 'Austria'\n",
+    "population_age_group_combiner[country] = {'75-84': ['75-79', '80-84'],\n",
+    "                                          '65-74': ['65-69', '70-74'],\n",
+    "                                          '55-64': ['55-59', '60-64'],\n",
+    "                                          '00-54': ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49', '50-54']}\n",
+    "\n",
+    "deaths_age_group_combiner[country] = {'75-84': ['75-79', '80-84'],\n",
+    "                                      '65-74': ['65-69', '70-74'],\n",
+    "                                      '55-64': ['55-59', '60-64'],\n",
+    "                                      '00-54': ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49', '50-54']}\n",
+    "\n",
+    "covid_age_group_combiner[country] ={'00-54': ['00-04', '05-14', '15-24', '25-34', '35-44', '45-54']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bb58599a-732e-4928-a813-43c74c2921e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{data_dir_path}/population_age_group_combiner.json', 'w') as file:\n",
+    "    json.dump(population_age_group_combiner, file, indent=4)\n",
+    "with open(f'{data_dir_path}/deaths_age_group_combiner.json', 'w') as file:\n",
+    "    json.dump(deaths_age_group_combiner, file, indent=4)\n",
+    "with open(f'{data_dir_path}/covid_age_group_combiner.json', 'w') as file:\n",
+    "    json.dump(covid_age_group_combiner, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c02911-0b2d-42ab-bb4b-5ec0cc44676c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
