--- a/prepare_covid_data.ipynb
+++ b/prepare_covid_data.ipynb
@@ -349,16 +349,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Prepare Output_5.csv: 100% [-------------] Time:  0:02:15 Elapsed Time: 0:02:15\n",
-      "Prepare population.csv: 100% [-----------] Time:  0:00:00 Elapsed Time: 0:00:00\n"
+      "Prepare inputDB.csv: 100% [--------------] Time:  0:08:57 Elapsed Time: 0:08:57\n"
      ]
     }
    ],
    "source": [
-    "# prepare_data_inputDB()\n",
-    "prepare_data_output5()\n",
+    "prepare_data_inputDB()\n",
+    "# prepare_data_output5()\n",
     "# prepare_data_output10()\n",
-    "prepare_data_population()"
+    "# prepare_data_population()"
    ]
   },
   {
@@ -368,12 +367,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for country in countries.keys():\n",
-    "    df = pd.read_csv(f'{data_dir_path}/{country}/population.csv')\n",
-    "    new_df = pd.DataFrame({'Age': df['Age'].unique()})\n",
-    "    for i, region in enumerate(df['Region'].unique()):\n",
-    "        new_df.insert(i + 1, region, list(df[np.logical_and(df['Region'] == region, df['Sex'] == 'b')]['Population']), True)\n",
-    "    new_df.to_csv(f'{data_dir_path}/{country}/population.csv', index=False)"
+    "# for country in countries.keys():\n",
+    "#     df = pd.read_csv(f'{data_dir_path}/{country}/population.csv')\n",
+    "#     new_df = pd.DataFrame({'Age': df['Age'].unique()})\n",
+    "#     for i, region in enumerate(df['Region'].unique()):\n",
+    "#         new_df.insert(i + 1, region, list(df[np.logical_and(df['Region'] == region, df['Sex'] == 'b')]['Population']), True)\n",
+    "#     new_df.to_csv(f'{data_dir_path}/{country}/population.csv', index=False)"
    ]
   },
   {
